@@ -1,3 +1,3 @@
-#define MODULE_VERSION_STRING	"pre0.2.2-9"
+#define MODULE_VERSION_STRING	"pre0.2.2-10"
 #define MODULE_VERSION_NUMBER	202
 #define MODULE_VERSION_NUMSTR	"0.2.2"
