@@ -15,6 +15,8 @@ Changes since 0.2.1
    and CURLOPT_ACCEPT_ENCODING (deprecated CURLOPT_ENCODING) (John Houck)
 9. src/curl-module.c: If CURLOPT_URL is used to set the URL for a
    descriptor, then update the EZ_Type url field.
+10. autoconf/scripts/getsyslibs.sh: Updated to better support
+    multiarch on linux
 
 Changes since 0.2.0
 1. src/curl-module.c: removed "ifdef"s from the code and replaced them
